#
# Copyright (C) 2004 Mekensleep
#
# Mekensleep
# 24 rue vieille du temple
# 75004 Paris
#       licensing@mekensleep.com
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# Authors:
#  Loic Dachary <loic@gnu.org>
#
# 
MAINTAINERCLEANFILES = Makefile.in config.h poker_config.h

EXTRA_DIST = poker_config.h.in config.h.in

nobase_pkginclude_HEADERS = \
	combinations.h \
	deck.h \
	deck_astud.h \
	deck_joker.h \
	deck_std.h \
	deck_undef.h \
	enumdefs.h \
	enumerate.h \
	enumord.h \
	evx_defs.h \
	game_astud.h \
	game_joker.h \
	game_std.h \
	handval.h \
	handval_low.h \
	inlines/eval.h \
	inlines/eval_astud.h \
	inlines/eval_joker.h \
	inlines/eval_joker_low.h \
	inlines/eval_joker_low8.h \
	inlines/eval_low.h \
	inlines/eval_low8.h \
	inlines/eval_low27.h \
	inlines/eval_omaha.h \
	inlines/eval_type.h \
	inlines/evx5.h \
	inlines/evx7.h \
	inlines/evx_action.h \
	inlines/evx_inlines.h \
	poker_config.h \
	poker_defs.h \
	pokereval_export.h \
	rules_astud.h \
	rules_joker.h \
	rules_std.h \
	rules_undef.h
